# Kinect2_VideoCapture

./: CMakeLists.txt  README.md  captureImage.cpp  启动方式.txt
File1/: depth .txt  depth .txt~  rgb.txt  rgb.txt~
